landing_page: fixed header font size

--- a/nobleza-frankie/landing_page/submit.html
+++ b/nobleza-frankie/landing_page/submit.html
@@ -187,7 +187,7 @@
        
        <section id='sub-con'>
             <p>Thank you for choosing Ferrari.<br> Please wait for our
-                confirmation message within 48 hours to confirm your
+                confirmation message within 48 hours and confirm your
                 scheduled test-drive.
             </p>
        </section>
